# sensors2mqtt

./: .gitignore  HISTORY.md  README.md  Sensor.py  pyproject.toml  requirements.txt  sensors.yaml  sensors2mqtt.py  sensors_settings.yaml  single_file_setup  start_debug  start_normal  update
.github/workflows/: codeql-analysis.yml  pylint.yml
sensors/: Generic_PulseCounter.py  Maximintegrated_DS18B20.py  Maximintegrated_DS18S20.py  TexasInstruments_INA219_4_20mA.py
sensors/Generic_DahuaEvents/: LINUX_Generic_DahuaEvents.py  example_settings.yaml
sensors/Generic_PulseCounter/: README.md  RPI_Generic_PulseCounter.py  example_settings.yaml
sensors/Generic_PulseCounter/App_01_Water_Meter/: README.md
sensors/Generic_SystemInfo/: LINUX_Generic_SystemInfo.py  README.md
sensors/Generic_Ultrasonic/: RPI_Generic_Ultrasonic.py  example_settings.yaml
sensors/LINUX_Maximintegrated_DS18B20/: LINUX_Maximintegrated_DS18B20.py  example_settings.yaml
sensors/LINUX_TexasInstruments_INA219_4_20mA/: LINUX_TexasInstruments_INA219_4_20mA.py  example_settings.yaml
sensors/Maximintegrated_DS18B20/: LINUX_Maximintegrated_DS18B20.py  README.md  example_settings.yaml
sensors/Plantower_PMS5003/: example_settings.yaml
sensors/RPI_Generic_PulseCounter/: README.md  RPI_Generic_PulseCounter.py  example_settings.yaml
sensors/TexasInstruments_INA219_4_20mA/: LINUX_TexasInstruments_INA219_4_20mA.py  README.md  example_settings.yaml
sensors/TexasInstruments_INA226_4_20mA/: LINUX_TexasInstruments_INA226_4_20mA.py  README.md
sensors2mqtt/: Sensor.py  sensors2mqtt.py  sensors_settings.yaml
sensors2mqtt/sensors/Dahua_Events/: LINUX_Dahua_Events.py  README.md  example_settings.yaml
sensors2mqtt/sensors/Generic_DahuaEvents/: LINUX_Generic_DahuaEvents.py
sensors2mqtt/sensors/Generic_PulseCounter/: README.md  RPI_Generic_PulseCounter.py
sensors2mqtt/sensors/Generic_SystemInfo/: LINUX_Generic_SystemInfo.py  (+2 more)
(+14 files in other folders)
