[project]
name = "sensors2mqtt"
version = "0.0.1"
authors = [
  { name="Dries Claerbout", email="claerbout@hotmail.com" },
]
description = "Universal Sensor data transporter over MQTT"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: POSIX :: Linux",
	"Development Status :: 4 - Beta",

]

[project.urls]
"Homepage" = "https://github.com/DCL777/sensors2mqtt"
"Bug Tracker" = "https://github.com/DCL777/sensors2mqtt/issues"